@@ -1,0 +1,28 @@
+<!DOCTYPE html> 
+<!--
+  -- A bootstrap navbar.
+  -- Copyright SJ Hindmarch 2014
+  -- Distributed under the GNU General Public License
+  -->
+
+<!-- Navigation -->
+<nav role="navigation" class="navbar navbar-default">
+  <div class="navbar-header">
+    <button type="button" data-target="#navbarCollapse" 
+	    data-toggle="collapse" class="navbar-toggle">
+      <span class="sr-only">Toggle navigation</span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+    </button>
+    <a href="#navbarCollapse" class="navbar-brand">Navigation</a>
+  </div>
+  <div id="navbarCollapse" class="collapse navbar-collapse">
+    <ul class="nav navbar-nav">
+      <li><a href="..">Index</a></li>
+      <li><a href="/">Site</a></li>
+      <li><a href="http://home.btconnect.com/sjhindmarch/">External Home Page</a></li>
+    </ul>
+  </div>
+</nav>
+<!-- Navigation Ends -->
